specification/specs/x_pack/security/user/invalidate_user_access_token/InvalidateUserAccessTokenRequest.ts
@rest_spec_name("security.invalidate_token")
class InvalidateUserAccessTokenRequest extends RequestBase {
  query_parameters?: {
  }
  body?: {
  }
}
